// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly in editing mode 1`] = `
<Card>
  <CardContent>
    <Button
      as="button"
      basic={true}
      floated="right"
      icon="remove"
      onClick={[Function]}
      size="mini"
    />
    <Image
      as="img"
      centered={true}
      ui={true}
    />
    <CardHeader>
      Test
    </CardHeader>
    <CardMeta />
    <CardDescription>
      <FormattedMessage
        defaultMessage="Allowed Methods"
        id="dapps.methods.allowedMethods"
        tagName="span"
        values={Object {}}
      />
      :
      <List>
        <ListItem
          key="0"
          onClick={[Function]}
        >
          <ListIcon>
            <CheckboxUntickedIcon />
          </ListIcon>
          foo
        </ListItem>
        <ListItem
          key="1"
          onClick={[Function]}
        >
          <ListIcon>
            <CheckboxTickedIcon />
          </ListIcon>
          bar
        </ListItem>
      </List>
    </CardDescription>
  </CardContent>
</Card>
`;

exports[`should render correctly in viewing mode 1`] = `
<Card>
  <CardContent>
    <Button
      as="button"
      basic={true}
      floated="right"
      icon="edit"
      onClick={[Function]}
      size="mini"
    />
    <Image
      as="img"
      centered={true}
      ui={true}
    />
    <CardHeader>
      Test
    </CardHeader>
    <CardMeta />
    <CardDescription>
      <FormattedMessage
        defaultMessage="Allowed Methods"
        id="dapps.methods.allowedMethods"
        tagName="span"
        values={Object {}}
      />
      :
      <List
        bulleted={true}
      >
        <ListItem
          key="0"
        >
          bar
        </ListItem>
      </List>
    </CardDescription>
  </CardContent>
</Card>
`;
